<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/bg_dashboard"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/distance_8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_emergency_report"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/distance_8dp"
        android:layout_weight="1"
        android:paddingRight="@dimen/distance_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_employee_code"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/et_employee_id"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_weight="2"
                android:background="@drawable/bg_edittext_stroke_gray"
                android:hint="@string/text_input_id_employee"
                android:padding="@dimen/distance_8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:text="@string/text_content_report"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:text="@string/text_list_report"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/size_50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="STT"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Mã nhân viên"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_timestart"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kết thúc"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey_dark" />

        <ListView
            android:id="@+id/lv_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@null" />


        <Button
            android:id="@+id/bt_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_dialog"
            android:text="@string/text_end"
            android:textColor="@color/whiteThree"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_dialog"
        android:text="@string/text_begin"
        android:textColor="@color/whiteThree" />

</LinearLayout>
