<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/whiteThree"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/distance_16dp"
            android:layout_marginBottom="@dimen/distance_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_change_password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/distance_16dp"
                android:layout_marginRight="@dimen/distance_16dp"
                android:theme="@style/TextLabel"
                android:layout_marginTop="@dimen/distance_16dp">

                <EditText
                    android:id="@+id/et_pass_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password_old"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/distance_16dp"
                android:layout_marginRight="@dimen/distance_16dp"
                android:theme="@style/TextLabel"
                android:layout_marginTop="@dimen/distance_8dp">

                <EditText
                    android:id="@+id/et_pass_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password_new"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/distance_16dp"
                android:layout_marginRight="@dimen/distance_16dp"
                android:theme="@style/TextLabel"
                android:layout_marginTop="@dimen/distance_8dp">

                <EditText
                    android:id="@+id/et_re_pass_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_re_password_new"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14sp" />

            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/distance_16dp"
                android:layout_marginRight="@dimen/distance_16dp"
                android:layout_marginTop="@dimen/distance_8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/bg_button_grey"
                    android:id="@+id/tv_cancel"
                    android:textSize="@dimen/text_14sp"
                    android:text="@string/text_cancel" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/tv_change"
                    android:background="@drawable/bg_button_dialog"
                    android:textColor="@color/whiteThree"
                    android:textSize="@dimen/text_14sp"
                    android:text="@string/text_change" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>