<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/bg_dashboard"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/distance_8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_manager_gift"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="@dimen/distance_8dp"
            android:paddingStart="@dimen/distance_8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/distance_16dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_image_gift"
                    android:gravity="center"
                    android:textSize="@dimen/text_12sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_name_gift"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_number"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lv_report"
                android:layout_marginBottom="@dimen/distance_8dp"/>
        </LinearLayout>

</LinearLayout>
