<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/bg_dashboard"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_report_stock"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:padding="@dimen/distance_8dp"
                android:src="@drawable/ic_save" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/distance_8dp"
        android:layout_marginEnd="@dimen/distance_8dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance_8dp"
            app:cardBackgroundColor="@color/whiteThree">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/distance_8dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_product_in_warehouse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_checkbox"
                        android:checked="true"
                        android:paddingLeft="@dimen/distance_8dp"
                        android:text="@string/text_product_in_warehouse"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_product_in_posm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/distance_5dp"
                        android:button="@drawable/custom_checkbox"
                        android:paddingLeft="@dimen/distance_8dp"

                        android:text="@string/text_product_in_posm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14sp"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/distance_4dp"
            android:layout_marginBottom="@dimen/distance_8dp"
            android:layout_marginEnd="@dimen/distance_4dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>